Add flash messsages to starter

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -16,6 +16,26 @@
 
 	<main role="main">
 
+		<div class="container">
+			<% if flash[:success] %>
+				<div class="alert alert-success alert-dismissible fade show" role="alert">
+				  <%= flash[:success] %>
+				  <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+				    <span aria-hidden="true">&times;</span>
+				  </button>
+				</div>
+			<% end %>
+
+			<% if flash[:error] %>
+				<div class="alert alert-danger alert-dismissible fade show" role="alert">
+				  <%= flash[:error] %>
+				  <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+				    <span aria-hidden="true">&times;</span>
+				  </button>
+				</div>
+			<% end %>
+		<% end %>
+
 		<%= yield %>
 
 	</main>
